--- a/dr_index.html
+++ b/dr_index.html
@@ -82,10 +82,11 @@
             Hope.
         </p>
         <h2>How to Join</h2>
-        <p>You can guarantee a spot by filling out the entry form and mailing it to dianesrun@example.com. The $35 entry fee
-            is tax deductible and goes directly to important research and women in need. We keep our overhead very low so
-            every dollar counts. More than 75% of the net proceeds fund screening and treatment programs in your communities.
-            We welcome out-of-town visitors. We will help you find accommodations during your visit.</p>
+        <p>You can guarantee a spot by filling out the entry form and mailing it to
+            <a href="mailto:dianesrun@example.com">dianesrun@example.com</a>. The $35 entry fee is tax deductible and goes directly to important research and women
+            in need. We keep our overhead very low so every dollar counts. More than 75% of the net proceeds fund screening
+            and treatment programs in your communities. We welcome out-of-town visitors. We will help you find
+            <a href="dr_faq.html#faq13">accommodations</a> during your visit.</p>
         <h2>History</h2>
         <p>Since its inception in 2004, Diane's Run has grown from a purely local event involving 100 runners to a signature
             Wyoming event with more than 2000 participants annually. The event is enormously effective in spreading the message
@@ -99,6 +100,9 @@
             her and continues to be an inspiration to the thousands of runners who have participated in this event. We hope
             you can join us this year and become part of the Diane's Run family.</p>
     </section>
+
+    <!-- This is the footer which can be seen at the bottom of the page with the address of Diane's Run -->
+    <footer>Diane’s Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001</footer>
 </body>
 
 </html>
